force-app/main/default/objects/CS_Incentive_Tier__c/CS_Incentive_Tier__c.object-meta.xml
<CustomObject>
    <label>CS Incentive Tier</label>
    <nameField>
        <label>Tier</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CS Incentive Tier</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>