force-app/main/default/objects/CS_Incentive_Tier__c/fields/Team_Thresholda__c.field-meta.xml
<CustomField>
    <fullName>Team_Thresholda__c</fullName>
    <label>Team Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>