force-app/main/default/objects/CS_Incentive_Tier__c/fields/Tier_3_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Tier_3_Threshold__c</fullName>
    <label>Tier 3 Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>